@@ -6,11 +6,17 @@
  2015/03/24 MicroTESK 2.2 alpha
 --------------------------------------------------------------------------------
 
+ 2015/06/05 MicroTESK 2.2.4 beta
+
+ The new build contains the following changes:
+
+
+
  2015/05/29 MicroTESK 2.2.3 beta
 
  The new build contains the following changes:
 
- - Test data is generated taking into account data generated for other\
+ - Test data is generated taking into account data generated for other
    instructions.
  - Statistics on test program size and test generator performance is collected.
  - Test programs are split into parts if they exceed the specified limits
